# Easy-Agents

./: .ai_cr_config.yml  .easy_agents_config.yml  .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: qa.yml  test.yml
docs/: index.md  installation.md  usage.md
src/ai_cr/: __init__.py  cli.py  code_review.py
src/ai_cr/agent_deps/: agent_deps.py
src/ai_cr/agents/code_analysis/: code_context.py  symbol_analyzer.py
src/ai_cr/ai_utils/: __init__.py  ai_runner.py
src/ai_cr/cli/: cli.py
src/ai_cr/cli/commands/: __init__.py
src/ai_cr/cli/commands/analyze_symbol/: cli.py
src/ai_cr/cli/commands/cr_generator/: cli.py
src/ai_cr/cr_generator/: __init__.py  cr_generator.py
src/ai_cr/gitlab_utils/: gitlab_api.py
src/ai_cr/logger/: logging_utils.py  streaming_status.py
src/ai_cr/settings/: __init__.py  settings.py
src/ai_cr/templates/: system_prompt.j2
src/ai_cr/tools/: __init__.py  find_tool.py  function_tool.py  grep.py  log_tool.py  read_tool.py  thinking_tool.py
src/ai_cr/utils/: ai_runner.py  common.py  logging_utils.py  templates_loader.py
src/ai_cr/utils/agents_runner/: agents_runner.py
src/ai_cr/utils/ai_utils/: __init__.py  ai_runner.py  common_ai_utils.py  orchastrator.py
src/ai_cr/utils/ai_utils/jobs/: __init__.py  base_job.py  diff_analysis.py
src/ai_cr/utils/ai_utils/runners/: __init__.py  base_ai_runner.py  factory.py  ollama_runners.py  openai_runner.py
src/ai_cr/utils/ai_utils/task/: __init__.py  ai_task.py
src/ai_cr/utils/ai_utils/tools/: __init__.py  abstract_tool.py  base_tool.py  grep.py
src/ai_cr/utils/ai_utils/types/: context.py
src/ai_cr/utils/git_utils/: git_diff.py
src/ai_cr/utils/gitlab_utils/: __init__.py
src/easy_agents/: __init__.py  __main__.py  cli.py
src/easy_agents/agent/: agent.py  agent_loop.py  context.py  model.py  router.py  tool.py
src/easy_agents/agents/code/: symbol_analyzer.py
src/easy_agents/agents/code_analysis/: symbol_analyzer.py
src/easy_agents/agents/cr_agent/: cli.py  cr_generator.py
src/easy_agents/cli/: __init__.py  cli.py
src/easy_agents/cli/commands/analyze_symbol/: cli.py
src/easy_agents/cli/commands/cr_generator/: cli.py
src/easy_agents/config/: __init__.py
src/easy_agents/config/agents/: context_factory.py
src/easy_agents/core/: __init__.py  agent.py  agent_loop.py  context.py  context_refiner.py  model.py  router.py  run_context.py  tool.py
src/easy_agents/core/model/: __init__.py  model.py
src/easy_agents/easy_agents/: __init__.py
src/easy_agents/easy_agents/Context/: context.py
src/easy_agents/easy_agents/runners/: base_ai_runner.py  factory.py
src/easy_agents/easy_agents/task/: ai_task.py
src/easy_agents/easy_agents/tools/: abstract_tool.py
src/easy_agents/refiners/memory_compression_refiner/: __init__.py  memory_compression_refiner.py
src/easy_agents/settings/: settings.py
src/easy_agents/templates/: __init__.py  templates_loader.py
src/easy_agents/tools/: __init__.py  find_tool.py  list_dir_tool.py  log_tool.py  read_tool.py  thinking_tool.py
src/easy_agents/utils/agents_runner/: __init__.py  agents_runner.py
src/easy_agents/utils/gitlab_utils/: __init__.py  gitlab_api.py
src/easy_agents/utils/types/: code_review.py
tests/: __init__.py  conftest.py  example_models.yaml  test_agent_loop.py  test_ai_cr.py  test_model.py  test_router.py  test_settings.py
tests/test_agents/: conftest.py  test_symbol_analyzer.py
tests/test_core/: conftest.py  test_agent.py  test_agent_loop.py  test_model.py  test_router.py
tests/test_core/support/: common_base_models.py  helper_fake_tools.py  helper_routers.py
tests/test_tools/: test_find_tool.py  test_list_dir_tool.py  test_read_tool.py
